# bevyjam3

./: Cargo.toml  README.md
.github/workflows/: ci.yaml  release.yaml
assets/: doctor.xcf
raw_assets/: girl.xcf  infected.xcf  pill.xcf
src/: assets.rs  components.rs  constants.rs  events.rs  main.rs  sound.rs  state.rs  utils.rs
src/state/: game.rs  game_over.rs  loading.rs  tower_placing.rs  win.rs
src/state/game/: bullet.rs  damage.rs  enemy.rs  enemy_goal.rs  enemy_tower.rs  goal.rs  health.rs  hud.rs  money.rs  movement.rs  player.rs  setup.rs  shooting.rs  side_effect.rs  sound.rs  tower.rs  tower_choice.rs  tower_placing.rs  tower_radius.rs  wobble.rs
src/state/game/hud/: damage.rs  disappear_timer.rs  popup.rs
src/state/game/movement/: velocity.rs
src/state/game/side_effect/: duplicate.rs  extra_damage.rs  insta_kill.rs  slow_down.rs  speed_up.rs  strengthen.rs
src/state/game/tower_choice/: style.rs
src/state/loading/: assets_loading.rs
wasm/: index.html
